Update discount message and remove logo image

--- a/index.html
+++ b/index.html
@@ -190,7 +190,6 @@ footer strong{
 <!-- HERO -->
 <div class="hero">
   <div class="hero-box">
-    <img src="imago.png" alt="Imago Logo">
 
     <h1>Bangun Brand Digital<br><span>Lebih Profesional & Meyakinkan</span></h1>
 
@@ -226,7 +225,7 @@ E-book berkualitas tinggi yang dirancang khusus untuk Anda serta
 disajikan secara simpel, menarik, dan penuh kesan.
 </p>
 <div class="discount">
-Diskon 30% sampai 1
+Diskon 30% sampai 1 Februari!!
 </div>
 <button onclick="order('E-book Digital Imago (Diskon 30%)')">
 Beli E-book Sekarang
