--- a/index.html
+++ b/index.html
@@ -5,292 +5,129 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Imago Creative Group</title>
 
-<style>
-*{box-sizing:border-box}
-body{
-  margin:0;
-  font-family:'Segoe UI',Arial,sans-serif;
-  background:#fff;
-  color:#222;
-  scroll-behavior:smooth
-}
-
-/* HERO */
-.hero{
-  min-height:100vh;
-  background:
-    linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)),
-    url("https://images.unsplash.com/photo-1522202176988-66273c2fd55f");
-  background-size:cover;
-  background-position:center;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  text-align:center;
-  padding:40px 20px;
-  color:#fff
-}
-.hero-box{max-width:900px}
-.hero img{
-  width:140px;
-  margin-bottom:25px
-}
-.hero h1{
-  font-size:48px;
-  margin-bottom:15px;
-  letter-spacing:1px
-}
-.hero span{
-  color:#00e0ff
-}
-.hero p{
-  font-size:19px;
-  color:#e0e0e0;
-  line-height:1.7;
-  margin-bottom:35px
-}
-.hero button{
-  padding:16px 38px;
-  border-radius:50px;
-  border:none;
-  background:#00e0ff;
-  color:#000;
-  font-size:16px;
-  font-weight:bold;
-  cursor:pointer;
-  transition:.3s
-}
-.hero button:hover{
-  transform:scale(1.08)
-}
-
-/* TRUST */
-.trust{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
-  gap:20px;
-  text-align:center;
-  margin-top:50px;
-  color:#ddd;
-  font-size:14px
-}
-
-/* SECTION */
-section{
-  padding:90px 20px;
-  max-width:1200px;
-  margin:auto
-}
-section h2{
-  text-align:center;
-  font-size:36px;
-  margin-bottom:50px
-}
-
-/* SERVICE */
-.grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:30px
-}
-.card{
-  background:#fff;
-  border-radius:18px;
-  padding:30px;
-  box-shadow:0 15px 40px rgba(0,0,0,.12);
-  transition:.35s
-}
-.card:hover{
-  transform:translateY(-10px)
-}
-.divisi{
-  font-size:12px;
-  color:#888
-}
-.card h3{
-  margin:12px 0
-}
-.card p{
-  font-size:15px
-}
-.card button{
-  margin-top:18px;
-  width:100%;
-  padding:14px;
-  border-radius:10px;
-  border:none;
-  background:#000;
-  color:#fff;
-  cursor:pointer
-}
-
-/* EBOOK */
-.ebook{
-  background:linear-gradient(135deg,#000,#1a1a1a);
-  color:#fff;
-  border-radius:30px;
-  padding:70px 30px;
-  text-align:center
-}
-.ebook h2{
-  color:#fff
-}
-.ebook p{
-  max-width:800px;
-  margin:auto;
-  font-size:18px;
-  line-height:1.7
-}
-.ebook .discount{
-  margin-top:20px;
-  font-size:20px;
-  font-weight:bold;
-  color:#00e0ff
-}
-.ebook button{
-  margin-top:35px;
-  padding:18px 40px;
-  border-radius:50px;
-  border:none;
-  background:#00e0ff;
-  color:#000;
-  font-size:17px;
-  font-weight:bold;
-  cursor:pointer
-}
-
-/* ABOUT */
-.about{
-  text-align:center;
-  max-width:900px;
-  margin:auto;
-  font-size:18px;
-  line-height:1.8
-}
-
-/* FOOTER */
-footer{
-  background:#000;
-  color:#ccc;
-  padding:40px 20px;
-  text-align:center
-}
-footer strong{
-  color:#fff
-}
-.social{
-  margin-top:15px;
-  font-weight:bold
-}
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
+<!-- NAV -->
+<nav>
+  <strong>Imago Creative Group</strong>
+  <a href="#layanan">Layanan</a>
+  <a href="#ebook">E-Book</a>
+</nav>
+
 <!-- HERO -->
-<div class="hero">
-  <div class="hero-box">
-
-    <h1>Bangun Brand Digital<br><span>Lebih Profesional & Meyakinkan</span></h1>
-
-    <p>
-      Imago Creative Group membantu bisnis, personal brand, dan UMKM
-      berkembang melalui desain visual, konten kreatif,
-      produk digital, dan strategi marketing modern.
-    </p>
-
-    <button onclick="document.getElementById('layanan').scrollIntoView()">Mulai Sekarang</button>
-
-    <div class="trust">
-      <div>✔ Profesional</div>
-      <div>✔ Harga Terjangkau</div>
-      <div>✔ Fast Response</div>
-      <div>✔ Berpengalaman</div>
-    </div>
+<header class="hero">
+  <h1>Mulai Sekarang</h1>
+  <div class="hero-btn">
+    <button onclick="scrollToId('layanan')">Lihat Layanan</button>
+    <button class="ebook-btn" onclick="scrollToId('ebook')">Beli E-Book</button>
   </div>
-</div>
+</header>
 
-<!-- SERVICES -->
+<!-- LAYANAN -->
 <section id="layanan">
-<h2>Layanan Unggulan Kami</h2>
-<div class="grid" id="list-layanan"></div>
+<h2>Katalog Harga Layanan</h2>
+<div class="grid" id="services"></div>
 </section>
 
 <!-- EBOOK -->
-<section>
-<div class="ebook">
-<h2>E-book Digital Imago</h2>
+<section id="ebook">
+<div class="ebook-box">
+<h2>E-Book Digital Imago</h2>
 <p>
-E-book berkualitas tinggi yang dirancang khusus untuk Anda serta
-disajikan secara simpel, menarik, dan penuh kesan.
+E-book berkualitas tinggi yang dirancang khusus untuk Anda
+serta disajikan secara simpel, menarik, dan penuh kesan.
 </p>
-<div class="discount">
-Diskon 30% sampai 1 Februari!!
-</div>
-<button onclick="order('E-book Digital Imago (Diskon 30%)')">
-Beli E-book Sekarang
-</button>
-</div>
-</section>
 
-<!-- ABOUT -->
-<section>
-<h2>Tentang Imago</h2>
-<div class="about">
-Imago Creative Group adalah perusahaan kreatif digital
-yang mengedepankan kualitas, strategi, dan profesionalisme.
-Kami hadir bukan sekadar membuat desain,
-tetapi menciptakan solusi yang berdampak nyata
-bagi pertumbuhan bisnis Anda.
+<div class="promo">Diskon 30% Hanya sampai 1 Februari</div>
+
+<div class="countdown">
+  <div><span id="d">0</span>Hari</div>
+  <div><span id="h">0</span>Jam</div>
+  <div><span id="m">0</span>Menit</div>
+  <div><span id="s">0</span>Detik</div>
+</div>
+
+<div class="allpromo">
+Informasi Diskon<br>
+<b>30% all product dalam rangka Tahun Baru<br>S.D 1 Februari 2026</b>
+</div>
+
+<button class="buy" onclick="order('E-Book Digital Imago')">Beli Sekarang</button>
 </div>
 </section>
 
 <footer>
-<strong>Imago Creative Group</strong><br>
+<b>Imago Creative Group</b><br>
 Instagram: @ImagoCreative.id<br>
 TikTok: @imago.creative.group
 </footer>
 
 <script>
+/* SERVICES */
 const services=[
-{d:"Visual",n:"Edit Foto",h:"Rp 5.000 / foto"},
-{d:"Visual",n:"Edit Video",h:"Rp 5.000 / video"},
-{d:"Visual",n:"Edit Canva",h:"Rp 15.000 / desain"},
-{d:"Visual",n:"Edit ID Card",h:"Rp 2.500 / desain"},
-{d:"Visual",n:"Edit Selain di Atas",h:"Rp 2.500 – Rp 50.000"},
-{d:"Visual",n:"Edit Dokumen",h:"Rp 25.000 – Rp 35.000"},
-{d:"Visual",n:"Desain Logo",h:"Rp 50.000 – Rp 150.000"},
-{d:"Visual",n:"Desain Konten Sosial Media",h:"Rp 20.000 – Rp 50.000"},
-{d:"Visual",n:"Desain Undangan",h:"Rp 25.000 – Rp 75.000"},
-{d:"Visual",n:"Motion Graphic Sederhana",h:"Rp 50.000 – Rp 100.000"},
-{d:"Kreatif",n:"Skrip Kreatif",h:"Rp 15.000 / skrip"},
-{d:"Kreatif",n:"Konsep Kampanye Kreatif",h:"Rp 50.000 – Rp 100.000"},
-{d:"Kreatif",n:"Copywriting",h:"Rp 10.000 – Rp 30.000"},
-{d:"Kreatif",n:"Storyboard / Outline Konten",h:"Rp 20.000 – Rp 50.000"},
-{d:"Kreatif",n:"Ide Konten Bulanan (10 Ide)",h:"Rp 100.000"},
-{d:"Marketing",n:"Strategi Marketing Dasar",h:"Rp 50.000 – Rp 100.000"},
-{d:"Marketing",n:"Rencana Promosi (1 Campaign)",h:"Rp 75.000 – Rp 150.000"},
-{d:"Marketing",n:"Riset Target Audience",h:"Rp 50.000 – Rp 100.000"},
-{d:"Marketing",n:"Social Media Management (Mingguan)",h:"Rp 100.000 – Rp 300.000"},
-{d:"Marketing",n:"Konsultasi Marketing (1 Jam)",h:"Rp 75.000"}
+["Visual","Edit Foto","Rp 5.000 / foto"],
+["Visual","Edit Video","Rp 5.000 / video"],
+["Visual","Edit Canva","Rp 15.000 / desain"],
+["Visual","Edit ID Card","Rp 2.500 / desain"],
+["Visual","Edit selain di atas","Rp 2.500 – Rp 50.000"],
+["Visual","Edit Dokumen","Rp 25.000 – Rp 35.000"],
+["Visual","Desain Logo","Rp 50.000 – Rp 150.000"],
+["Visual","Desain Konten Sosial Media","Rp 20.000 – Rp 50.000"],
+["Visual","Desain Undangan","Rp 25.000 – Rp 75.000"],
+["Visual","Motion Graphic sederhana","Rp 50.000 – Rp 100.000"],
+["Kreatif","Membuat Skrip Kreatif","Rp 15.000"],
+["Kreatif","Membuat Konsep Kampanye","Rp 50.000 – Rp 100.000"],
+["Kreatif","Copywriting","Rp 10.000 – Rp 30.000"],
+["Kreatif","Storyboard Konten","Rp 20.000 – Rp 50.000"],
+["Kreatif","Ide Konten Bulanan","Rp 100.000"],
+["Marketing","Strategi Marketing","Rp 50.000 – Rp 100.000"],
+["Marketing","Rencana Promosi","Rp 75.000 – Rp 150.000"],
+["Marketing","Riset Target Audience","Rp 50.000 – Rp 100.000"],
+["Marketing","Social Media Management","Rp 100.000 – Rp 300.000"],
+["Marketing","Konsultasi Marketing","Rp 75.000"]
 ];
 
-const c=document.getElementById("list-layanan");
+const box=document.getElementById("services");
 services.forEach(s=>{
-c.innerHTML+=`
+box.innerHTML+=`
 <div class="card">
-<div class="divisi">Divisi ${s.d}</div>
-<h3>${s.n}</h3>
-<p>${s.h}</p>
-<button onclick="order('${s.n}')">Pesan via WhatsApp</button>
-</div>`
+<h3>${s[1]}</h3>
+<p>${s[2]}</p>
+<button onclick="order('${s[1]}')">Pesan via WhatsApp</button>
+</div>`;
 });
 
+/* WA 2 MODE */
 function order(n){
-const wa="6289508551377";
-const t=encodeURIComponent("Halo Imago Creative Group, saya ingin memesan: "+n);
-window.open(`https://wa.me/${wa}?text=${t}`,"_blank");
+const wa1="6289508551377";
+const wa2="6282281486780";
+
+const msg=encodeURIComponent(
+"ORDER BARU\n"+n+"\n"+new Date().toLocaleString()
+);
+
+window.open(`https://wa.me/${wa1}?text=${msg}`,"_blank");
+fetch(`https://wa.me/${wa2}?text=${msg}`);
 }
+
+/* SCROLL */
+function scrollToId(id){
+document.getElementById(id).scrollIntoView({behavior:"smooth"});
+}
+
+/* COUNTDOWN */
+const target=new Date("Feb 1, 2026 23:59:59").getTime();
+setInterval(()=>{
+const now=new Date().getTime();
+const diff=target-now;
+if(diff<0)return;
+d.innerText=Math.floor(diff/(1000*60*60*24));
+h.innerText=Math.floor(diff%(1000*60*60*24)/(1000*60*60));
+m.innerText=Math.floor(diff%(1000*60*60)/(1000*60));
+s.innerText=Math.floor(diff%(1000*60)/1000);
+},1000);
 </script>
 
 </body>
