--- a/admin-panel.html
+++ b/admin-panel.html
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
 <title>Admin Panel</title>
-<script src="admin.js"></script>
+<script>
+if(sessionStorage.getItem("ADMIN_LOGIN")!=="true"){
+  window.location="admin-login.html";
+}
+</script>
+<style>
+body{
+  background:#0a0a0a;
+  color:#fff;
+  font-family:Arial;
+  padding:40px;
+}
+</style>
 </head>
-<body onload="checkAdmin()">
 
-<h1>ADMIN PANEL</h1>
+<body>
+<h1>ADMIN PANEL – IMAGO</h1>
+<p>Status: 🔐 Super Private</p>
+<p>Monitoring WA aktif</p>
 
-<p>WA Layanan: +62 895-0855-1377</p>
-<p>WA Monitoring: +62 822-8148-6780</p>
+<button onclick="logout()">Logout</button>
 
-<button onclick="logout()">LOGOUT</button>
-
+<script>
+function logout(){
+  sessionStorage.clear();
+  location.href="admin-login.html";
+}
+</script>
 </body>
 </html>
